--- a/index.html
+++ b/index.html
@@ -2,6 +2,6 @@
 <html>
 <body>
 <h1>Hello World</h1>
-<p>Trying out hosting a simple site on GitHub Pages.</p>
+<p>Trying out hosting a simple site on GitHub Pages, with a custom domain!</p>
 </body>
 </html>
